--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Symple Cal</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name" translatable="false">Symple Cal</string>
+    <string name="remain_cal">Remaining Calories for Today</string>
+    <string name="enter_cal">Enter Cal. for this meal</string>
 </resources>
